# wave

./: CMakeLists.txt  README  ReadMe.txt  Resource.h  wave.cpp  wave.rc  wave.sln  wave.vcxproj  wave.vcxproj.filters
lib/: nfd.lib
src/: gui.cpp  gui.h  imgui.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  wav.cpp  wav.h
src/glad/: glad.c  glad.h
